[tool.poetry]
name = "testcompose"
version = "0.1.2"
description = "Provide an easy way to perform integration testing with docker and python"
authors = [
    "Olakunle Olaniyi"
]
license = "MIT License"
readme = "README.md"
keywords = [
    "docker",
    "testcontainers"
]

classifiers = [
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]


[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.26.0"
PyYAML = "^5.4.1"
pydantic = "1.10.2"
docker = "6.0.1"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-autorefs = "^0.4.1"
mkdocs-material-extensions = "^1.1.1"
mkdocs-git-revision-date-plugin = "^0.3.2"
mkdocs-material = "^9.0.2"
markupsafe = "^2.1.1"
markdown = "3.3.6"
mkdocstrings = {extras = ["python-legacy"], version = "^0.19.1"}


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.21.0"
tox = "^4.2.1"
kafka-python = "^2.0.2"
black = "^22.12.0"
pytest-mock = "^3.10.0"
pytest-cov = "^4.0.0"
coverage = "^7.0.3"
pyproject-toml = "^0.0.10"
types-pyyaml = "^6.0.12.2"
types-requests = "^2.28.11.7"
pytest = "^7.2.0"
mypy = "^0.991"
mypy-extensions = "^0.4.3"
typed-ast = "^1.5.4"
typing-extensions = "^4.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 110
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']
skip-string-normalization = true


[tool.pytest.ini_options]
addopts = [
    "--import-mode=prepend",
    "--durations=50",
    "-vv",
    "--color=yes",
    "--log-level=DEBUG"
]
