[metadata]
name = testcompose
summary = "Provide an easy way to perform integration testing with docker and python"
author = Olakunle Olaniyi
author_email = rugging24@gmail.com
version = attr: testcompose.__VERSION__
url = https://github.com/rugging24/python-testcompose
long_description = file: README.md
long_description_content_type = text/markdown
keywords = docker, testcontainers
license = Apache License 2.0
license_files =
   LICENSE

classifiers =
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Libraries :: Python Modules
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
project_urls =
    Documentation=https://github.com/rugging24/python-testcompose/blob/main/README.md
    Bug Tracker=https://github.com/rugging24/python-testcompose/issues
    Source Code=https://github.com/rugging24/python-testcompose

[options]
zip_safe = False
include_package_data = True
python_requires = ~=3.7
packages = find:
setup_requires =
    setuptools
    wheel

install_requires =
    docker>=6.0.1
    pydantic==1.10.2
    pyyaml>=5.4.1

[options.packages.find]
include =
    testcompose*
exclude =
    tests
    docker
    configurations
    scripts

[options.entry_points]

[bdist_wheel]
python-tag=py3

[files]
packages = testcompose

[easy_install]

[mypy]
ignore_missing_imports = False
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
pretty = True

[isort]
line_length=110
combine_as_imports = true
default_section = THIRDPARTY
known_first_party=testcompose,tests
skip=build,venv
profile = black

[options.extras_require]
dev =
    mypy-extensions>=0.4.3
    mypy>=0.910
    typed-ast>=1.4.3
    types-pyyaml>=5.4.12
    types-requests>=2.27.20
    typing-extensions>=4.0.0
    black>=21.12b0
    pyproject-toml>=0.0.11
    pre-commit>=2.15.0
    mkdocs-git-revision-date-plugin>=0.3.1
    mkdocs-material>=8.2.9
    mkdocs-material-extensions>=1.0.3
    mkdocstrings>=0.16.2
    mkdocs-autorefs>=0.3.0
    mkdocs>=1.3.0
    markdown>=3.3.6
    markupsafe>=2.0.1
test =
    requests>=2.26.0
    kafka-python>=2.0.2
    pytest-cov>=3.0.0
    pytest-mock>=3.6.1
    pytest>=6.2.5
    setuptools
doc =
    mkdocs-material
    mkdocs-git-revision-date-plugin
    mkdocs-material
    mkdocs-material-extensions
    mkdocstrings
    mkdocs-autorefs
    mkdocs
