[metadata]
summary = "Provide an easy way to perform integration testing with docker and python"
url = https://github.com/rugging24/python-testcompose
license_files =
   LICENSE

project_urls =
    Documentation=https://github.com/rugging24/python-testcompose/blob/main/README.md
    Bug Tracker=https://github.com/rugging24/python-testcompose/issues
    Source Code=https://github.com/rugging24/python-testcompose

[options.entry_points]

[bdist_wheel]
python-tag=py3

[files]
packages = testcompose

[easy_install]

[mypy]
ignore_missing_imports = False
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
pretty = True
